welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:7: error: not found: value NULL
  while(T(num)==NULL){
                ^golomb:9: error: not found: value NULL
      if (T(j)==NULL){
                ^